--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node src/server.ts"
+    "start": "nodemon --exec ts-node src/server.ts",
+    "migrate": "npx sequelize-cli db:migrate --config config/config.cjs",
+    "seed": "npx sequelize-cli db:seed:all --config config/config.cjs"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +28,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "nodemon": "^3.1.11",
+    "sequelize-cli": "^6.6.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
